--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -220,27 +220,26 @@ jobs:
     - name: 电报通知
       run: |
         MSG="
-        ${Emoji[$[$RANDOM % ${#Emoji[@]}]]} $GITHUB_REPOSITORY ${Emoji[$[$RANDOM % ${#Emoji[@]}]]}
         编译时间：${{ env.DATE }}
         Phicomm-N1编译完成
         "
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
 
-    - name: 复制文件
-      run: |
-        mkdir -p ./ARM_Out/
-        cp -a ${{ env.PACKAGED_OUTPUTPATH }}/* ./ARM_Out/
-        cd ARM_Out
-        mv openwrt_s905d_n1*.img.gz N1-$(date +%Y%m%d).img.gz
-        zip -r $GITHUB_WORKSPACE/ARM_Out/N1-$(date +%Y%m%d).zip N1-$(date +%Y%m%d).img.gz
+#    - name: 复制文件
+#      run: |
+#        mkdir -p ./ARM_Out/
+#        cp -a ${{ env.PACKAGED_OUTPUTPATH }}/* ./ARM_Out/
+#        cd ARM_Out
+#        mv openwrt_s905d_n1*.img.gz N1-$(date +%Y%m%d).img.gz
+#        zip -r $GITHUB_WORKSPACE/ARM_Out/N1-$(date +%Y%m%d).zip N1-$(date +%Y%m%d).img.gz
 
-    - name: 上传Aliyun
-      run: | 
-        echo "请自动忽略META-INF文件夹。" > 忽略META-INF文件夹.txt
-        zip_files=$(find $GITHUB_WORKSPACE/ARM_Out/N1* -name '*.zip' -type f -print | tr '\n' ';' | sed 's/;$//')
-        echo "Zip files: ${zip_files}"
-        chmod +x $GITHUB_WORKSPACE/diy/aliupload.py
-        python $GITHUB_WORKSPACE/diy/aliupload.py --token "${{ secrets.ALIYUN_TOKEN }}" --uploadFloder "OpenWrt/N1" --file "${zip_files}"
+#    - name: 上传Aliyun
+#      run: | 
+#        echo "请自动忽略META-INF文件夹。" > 忽略META-INF文件夹.txt
+#        zip_files=$(find $GITHUB_WORKSPACE/ARM_Out/N1* -name '*.zip' -type f -print | tr '\n' ';' | sed 's/;$//')
+#        echo "Zip files: ${zip_files}"
+#        chmod +x $GITHUB_WORKSPACE/diy/aliupload.py
+#        python $GITHUB_WORKSPACE/diy/aliupload.py --token "${{ secrets.ALIYUN_TOKEN }}" --uploadFloder "OpenWrt/N1" --file "${zip_files}"
 
   NanoPi-R2S:
     needs: [check]
@@ -392,27 +391,26 @@ jobs:
     - name: 电报通知
       run: |
         MSG="
-        ${Emoji[$[$RANDOM % ${#Emoji[@]}]]} $GITHUB_REPOSITORY ${Emoji[$[$RANDOM % ${#Emoji[@]}]]}
         编译时间：${{ env.DATE }}
         NanoPi-R2S编译完成
         "
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
 
-    - name: 复制文件
-      run: |
-        mkdir -p ./ARM_Out/
-        cp -a ${{ env.FIRMWARE }}/* ./ARM_Out/
-        cd ARM_Out
-        mv openwrt-rockchip-armv8-friendlyarm_nanopi-r2s-squashfs-sysupgrade.img.gz R2S-$(date +%Y%m%d).img.gz
-        zip -r $GITHUB_WORKSPACE/ARM_Out/R2S-$(date +%Y%m%d).zip R2S-$(date +%Y%m%d).img.gz
+#    - name: 复制文件
+#      run: |
+#        mkdir -p ./ARM_Out/
+#        cp -a ${{ env.FIRMWARE }}/* ./ARM_Out/
+#        cd ARM_Out
+#        mv openwrt-rockchip-armv8-friendlyarm_nanopi-r2s-squashfs-sysupgrade.img.gz R2S-$(date +%Y%m%d).img.gz
+#        zip -r $GITHUB_WORKSPACE/ARM_Out/R2S-$(date +%Y%m%d).zip R2S-$(date +%Y%m%d).img.gz
 
-    - name: 上传Aliyun
-      run: | 
-        echo "请自动忽略META-INF文件夹。" > 忽略META-INF文件夹.txt
-        zip_files=$(find $GITHUB_WORKSPACE/ARM_Out/R2S* -name '*.zip' -type f -print | tr '\n' ';' | sed 's/;$//')
-        echo "Zip files: ${zip_files}"
-        chmod +x $GITHUB_WORKSPACE/diy/aliupload.py
-        python $GITHUB_WORKSPACE/diy/aliupload.py --token "${{ secrets.ALIYUN_TOKEN }}" --uploadFloder "OpenWrt/R2S" --file "${zip_files}"   
+#    - name: 上传Aliyun
+#      run: | 
+#        echo "请自动忽略META-INF文件夹。" > 忽略META-INF文件夹.txt
+#        zip_files=$(find $GITHUB_WORKSPACE/ARM_Out/R2S* -name '*.zip' -type f -print | tr '\n' ';' | sed 's/;$//')
+#        echo "Zip files: ${zip_files}"
+#        chmod +x $GITHUB_WORKSPACE/diy/aliupload.py
+#        python $GITHUB_WORKSPACE/diy/aliupload.py --token "${{ secrets.ALIYUN_TOKEN }}" --uploadFloder "OpenWrt/R2S" --file "${zip_files}"   
 
   X86_64:
     needs: [check]
@@ -564,27 +562,26 @@ jobs:
     - name: 电报通知
       run: |
         MSG="
-        ${Emoji[$[$RANDOM % ${#Emoji[@]}]]} $GITHUB_REPOSITORY ${Emoji[$[$RANDOM % ${#Emoji[@]}]]}
         编译时间：${{ env.DATE }}
         X86_64编译完成
         "
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
 
-    - name: 复制文件
-      run: |
-        mkdir -p ./X86_Out/
-        cp -a ${{ env.FIRMWARE }}/* ./X86_Out/
-        cd X86_Out
-        mv openwrt-x86-64-generic-squashfs-combined-efi.img.gz X86-$(date +%Y%m%d).img.gz
-        zip -r $GITHUB_WORKSPACE/X86_Out/X86-$(date +%Y%m%d).zip X86-$(date +%Y%m%d).img.gz
+#    - name: 复制文件
+#      run: |
+#        mkdir -p ./X86_Out/
+#        cp -a ${{ env.FIRMWARE }}/* ./X86_Out/
+#        cd X86_Out
+#        mv openwrt-x86-64-generic-squashfs-combined-efi.img.gz X86-$(date +%Y%m%d).img.gz
+#        zip -r $GITHUB_WORKSPACE/X86_Out/X86-$(date +%Y%m%d).zip X86-$(date +%Y%m%d).img.gz
 
-    - name: 上传Aliyun
-      run: | 
-        echo "请自动忽略META-INF文件夹。" > 忽略META-INF文件夹.txt
-        zip_files=$(find $GITHUB_WORKSPACE/X86_Out/X86* -name '*.zip' -type f -print | tr '\n' ';' | sed 's/;$//')
-        echo "Zip files: ${zip_files}"
-        chmod +x $GITHUB_WORKSPACE/diy/aliupload.py
-        python $GITHUB_WORKSPACE/diy/aliupload.py --token "${{ secrets.ALIYUN_TOKEN }}" --uploadFloder "OpenWrt/X86" --file "${zip_files}"
+#    - name: 上传Aliyun
+#      run: | 
+#        echo "请自动忽略META-INF文件夹。" > 忽略META-INF文件夹.txt
+#        zip_files=$(find $GITHUB_WORKSPACE/X86_Out/X86* -name '*.zip' -type f -print | tr '\n' ';' | sed 's/;$//')
+#        echo "Zip files: ${zip_files}"
+#        chmod +x $GITHUB_WORKSPACE/diy/aliupload.py
+#        python $GITHUB_WORKSPACE/diy/aliupload.py --token "${{ secrets.ALIYUN_TOKEN }}" --uploadFloder "OpenWrt/X86" --file "${zip_files}"
 
   delete:
     needs: [Phicomm-N1, NanoPi-R2S, X86_64]
